# rust-padded-iterator

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml
src/: lib.rs  tests.rs  utils.rs
